editor-components/contacts/form6/form6.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  position: relative;
  overflow: hidden;
  min-height: 500px;
  display: flex !important;
  flex-direction: column;

  .max-content {
    display: flex;
    flex-direction: column;
    flex: 1;

    .wrapper {
      display: flex;
      width: 100%;
      flex: 1;
      gap: var(--composer-gap-lg);

      .image-container {
        position: relative;
        flex: 1;
        margin-left: calc(50% - 50vw);

        &.image-full-width {
          flex: none;
          width: 100%;
          max-width: 100%;
          height: 450px;
          margin: 0 !important;
          display: flex;
          justify-content: center;
          align-items: center;

          .image {
            object-fit: cover;
            border-radius: var(--composer-border-radius-md);
          }
        }

        .image {
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          object-fit: cover;
        }

        .overlay {
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          background-color: var(--composer-overlay-color);
          pointer-events: none;
          z-index: 1;
        }
      }

      .form-container {
        width: 50%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        gap: var(--composer-gap-md);

        &.without-image {
          width: 100%;
        }

        &.form-container-no-text {
          align-items: center;
          justify-content: center;
        }

        .header {
          align-items: baseline;

          .subtitle,
          .title,
          .description {
            content: "";
            text-align: left;
          }

          .subtitle {
            margin: var(--composer-gap-sm) 0;
          }
        }

        .form {
          display: flex;
          flex-wrap: wrap;
          gap: var(--composer-gap-md);
          justify-content: space-between;

          .button-container {
            .button-text {
              content: "";
            }
          }

          .form-item {
            width: calc(50% - (var(--composer-gap-md) / 2));

            &.full {
              width: 100%;
            }

            .form-item-label {
              margin-bottom: var(--composer-gap-xs);
              color: var(--composer-font-color-primary);
            }

            .input-container {
              position: relative;

              .input-icon {
                height: 16px;
                width: 16px;
                color: var(--composer-font-color-primary);
                position: absolute;
                left: var(--composer-gap-sm);
                top: var(--composer-gap-md);
                transform: translateY(-50%);
                object-fit: contain;
                display: flex;
                justify-content: center;
                align-items: center;
              }

              .input-textarea {
                width: 100%;
                resize: vertical;
                border: 1px solid var(--composer-tertiary-color);
                border-radius: var(--composer-border-radius-sm);
                padding: var(--composer-gap-sm) var(--composer-gap-md) var(--composer-gap-sm) var(--composer-gap-sm);
                min-height: 130px;
                outline: none;
                background: transparent;
                color: var(--composer-font-color-primary);
              }

              .input {
                width: 100%;
                border: 1px solid var(--composer-tertiary-color);
                border-radius: var(--composer-border-radius-sm);
                outline: none;
                padding: var(--composer-gap-sm) var(--composer-gap-md) var(--composer-gap-sm) calc(var(--composer-gap-md) + var(--composer-gap-sm));
                background: transparent;
                color: var(--composer-font-color-primary);
              }

              .input::placeholder,
              .input-textarea::placeholder {
                color: var(--composer-font-color-primary);
              }
            }
          }

          .error-message {
            color: var(--composer-danger-color);
            margin-top: 3px;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    min-height: 400px;
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    min-height: 300px;

    .max-content {
      .wrapper {
        flex-direction: column;

        .image-container {
          width: 100%;
          height: 250px;
          flex: none;
          position: relative;
          margin-left: 0;
        }

        .form-container {
          width: 100%;

          .form {
            .error-message {
              margin-top: 3px;
            }
          }
        }
      }
    }
  }
}

